# LemmingsStudio

./: .gitignore  CMakeLists.txt  README.md  indie_studio.cbp  linux-build.sh  unix-build.sh  win-build.ps1
ressources/mesh/: gate.b3d
ressources/mesh/basher/: basher.b3d
ressources/mesh/climber/: climber.b3d  climber_right.b3d
ressources/mesh/dead/: dead.b3d
ressources/mesh/exploder/: .gitkeep  exploder.b3d
ressources/mesh/floater/: floater.b3d
ressources/mesh/model/: model.dae
ressources/mesh/stopper/: stopper.b3d
ressources/mesh/walker/: walker.b3d  walker_right.b3d
src/: Node.cpp  Node.hpp  main.cpp  standards.cpp  standards.hpp  typedefs.hpp
src/Core/: Core.cpp  Core.hpp  Init.cpp
src/EventReceiver/: AEventReceiver.cpp  AEventReceiver.hpp  EventReceiverList.hpp
src/Exceptions/: DataException.cpp  Exception.cpp  FileException.cpp  GraphicException.cpp  SyntaxException.cpp
src/Exceptions/include/: DataException.hpp  Exception.hpp  FileException.hpp  GraphicException.hpp  SyntaxException.hpp
src/FileHandler/: FileHandler.cpp  FileHandler.hpp
src/Game/: Game.cpp  Game.hpp  GameEventReceiver.cpp  GameEventReceiver.hpp  Timer.cpp  Timer.hpp
src/Game/Actions/: AAction.cpp  AAction.hpp  ActionManager.cpp  ActionManager.hpp  Bash.hpp  Climb.hpp  Explode.hpp  Float.hpp  Stop.hpp  Walk.hpp
src/Game/Characters/: ACharacter.cpp  ACharacter.hpp  Lemming.cpp  Lemming.hpp  LemmingManager.cpp  LemmingManager.hpp
src/Game/Characters/Lemmings/: Basher.cpp  Climber.cpp  Dead.cpp  Exploder.cpp  Floater.cpp  Stopper.cpp  Walker.cpp
src/Game/GameInfo/: GameInfo.cpp  GameInfo.hpp
src/Game/Map/: ColorShade.h  ColorShadeGen.cpp  ColorShadeGen.hpp  Map.cpp  Map.hpp
src/Game/Map/Level/: ALevel.cpp  ALevel.hpp  ILevel.hpp  Level1.cpp  Level1.hpp  Level2.cpp  Level2.hpp  Level3.cpp  Level3.hpp
src/Game/Map/Resource/: Block.cpp  Block.hpp  Particule.cpp  Particule.hpp  Platform.cpp  Platform.hpp
src/Lib3D/: Lib3D.cpp  Lib3D.hpp  irrlicht.hpp
src/Lib3D/Graphic/: Accessor.cpp  Blit.cpp  Camera.cpp  Camera.hpp  Display.cpp  Graphic.hpp  Init.cpp  Misc.cpp
src/Lib3D/PhysicsEngine/: Collisions.cpp  Collisions.hpp
src/Page/: APage.cpp  APage.hpp  IPage.hpp  Pages.hpp
src/Page/Levels/: Levels.cpp  Levels.hpp  LevelsEventReceiver.cpp  LevelsEventReceiver.hpp
src/Page/Menu/: Menu.cpp  Menu.hpp  MenuEventReceiver.cpp  MenuEventReceiver.hpp
src/Page/Play/: Play.cpp  Play.hpp
src/Page/Scores/: Scores.cpp  Scores.hpp  ScoresEventReceiver.cpp  ScoresEventReceiver.hpp
src/Page/Settings/: Settings.cpp  Settings.hpp  SettingsEventReceiver.cpp  SettingsEventReceiver.hpp
src/SoundEngine/: SoundEngine.cpp  SoundEngine.hpp
src/TrashDir/: BillBoard.cpp  BillBoard.hpp
